--- a/public/user-dashboard.html
+++ b/public/user-dashboard.html
@@ -67,25 +67,25 @@
     <style>
       @keyframes moveHorizon {
     0% {
-        transform: translateX(5vw) translateY(0px) rotate(0deg);
+        transform: translateX(6vw) translateY(0px);
         opacity: 0.7;
     }
     50% {
-        transform: translateX(27.5vw) translateY(0px) rotate(2deg);
+        transform: translateX(25vw) translateY(0px);
         opacity: 0.7;
     }
     50.00001% {
-        transform: translateX(5vw) translateY(0px) rotate(0deg);
+        transform: translateX(6vw) translateY(0px);
         opacity: 0.7;
     }
     100% {
-        transform: translateX(27.5vw) translateY(0px) rotate(2deg);
+        transform: translateX(25vw) translateY(0px);
         opacity: 0.7;
     }
 }
 
 .crane {
-    animation: moveHorizon 5s infinite ease-in-out;
+    animation: moveHorizon 15s infinite ease-in-out;
 }
 
     </style>
@@ -93,15 +93,15 @@
     <div class="z-10 pointer-events-none overflow-hidden">
       <!-- Machine 1 (starts immediately) -->
       <div
-        class="absolute z-10 top-[91px] crane opacity-40"
+        class="absolute z-10 top-[91px] crane "
       >
         <img src="construction-2027213.svg" alt="" class="w-28" />
       </div>
     </div>
-    <div class="container mx-auto px-6 py-12 z-50">
+    <div class="container mx-auto px-6 py-12">
       <!-- Header -->
-      <div class="text-center z-50 mb-[25px]">
-        <h1 class="text-4xl relative font-extrabold z-50 text-custom-dark mb-4">
+      <div class="text-center mb-[25px]">
+        <h1 class="text-4xl relative f text-custom-dark mb-4">
           <span class="mr-5">Machine Yard | User</span>
           <div class="w-14 h-14 rounded-full border-[2px] border-[#2a431c] absolute -top-[11px] right-[385px] hover:scale-105 transition-transform duration-200">
             <a href="/user-profile.html">
