--- a/public/login.html
+++ b/public/login.html
@@ -125,6 +125,8 @@
                   </button>
                 </div>
                 <p class="error-message text-red-500 text-sm mt-1 hidden"></p>
+
+                <div class="mt-2"><a href="/forgot-password.html" class="mt-4 text-sm text-gray-200">Forgot password?</a></div>
               </div>
                     
                     <button type="submit" 
