--- a/public/index.html
+++ b/public/index.html
@@ -125,12 +125,16 @@
               <label class="block text-sm font-medium text-gray-600 mb-1"
                 >Email</label
               >
-              <input
-                type="email"
-                name="email"
-                class="w-full px-3 py-1.5 border border-gray-200 rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-transparent transition duration-150"
-                required
-              />
+              <input 
+            type="email" 
+            id="email" 
+            name="email" 
+            pattern="[a-z0-9]+@gmail\.com" 
+            title="Please enter only lowercase letters and numbers followed by @gmail.com"
+            placeholder="example123@gmail.com"
+            class="w-full px-3 py-1.5 border border-gray-200 rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-transparent transition duration-150"
+            required
+        >
               <p class="error-message text-red-500 text-sm mt-1 hidden"></p>
             </div>
 
