--- a/public/owner-add-machine.html
+++ b/public/owner-add-machine.html
@@ -72,6 +72,7 @@
     <script src="/js/utils.js"></script>
     <script>
       injectNavbar();
+      setProfilePic();
       document
         .getElementById("add-machine-form")
         .addEventListener("submit", async (e) => {
