--- a/public/owner-dashboard.html
+++ b/public/owner-dashboard.html
@@ -11,13 +11,8 @@
 <body class="min-h-screen bg-[#fcfaf8] font-sans">
   
   <div class="container mx-auto p-6 mt-3">
-    <div class="relative mr-10 gap-12 flex items-center justify-center">
-      <h1 class="text-4xl font-bold text-[#2a431c] mb-8 mr-10 text-center">Machine Yard | Owner</h1>
-      <div class="w-16 h-16 rounded-full border-[2px] border-[#2a431c] absolute -top-[10px] right-[340px] hover:scale-105 transition-transform duration-200">
-        <a href="/owner-profile.html">
-          <img id="dashboard-profile-pic" src="https://via.placeholder.com/150" alt="User Profile" class="w-full h-full object-cover rounded-full">
-        </a>
-      </div>
+    <div class="relative gap-12 flex items-center justify-center">
+      <h1 class="text-4xl font-bold text-[#2a431c] mb-8 text-center">Machine Yard | Owner</h1>
     </div>
     <!-- Machines Section -->
     <div class="bg-white p-6 rounded-lg mb-8">
