--- a/public/owner-edit-machine.html
+++ b/public/owner-edit-machine.html
@@ -47,7 +47,7 @@
   <script src="/js/utils.js"></script>
   <script>
     injectNavbar();
-
+    setProfilePic();
     const urlParams = new URLSearchParams(window.location.search);
     const machineId = urlParams.get("machineId");
 
