--- a/public/policies.html
+++ b/public/policies.html
@@ -116,6 +116,7 @@
     <script src="/js/utils.js"></script>
     <script>
         injectNavbar();
+        setProfilePic();
         document.addEventListener('DOMContentLoaded', () => {
             renderNavbar();
         });
