--- a/public/user-dashboard.html
+++ b/public/user-dashboard.html
@@ -102,12 +102,7 @@
       <!-- Header -->
       <div class="text-center mb-[25px]">
         <h1 class="text-4xl relative f text-custom-dark mb-4">
-          <span class="mr-5">Machine Yard | user</span>
-          <div class="w-14 h-14 rounded-full border-[2px] border-[#2a431c] absolute -top-[11px] right-[385px] hover:scale-105 transition-transform duration-200">
-            <a href="/user-profile.html">
-              <img id="dashboard-profile-pic" src="https://via.placeholder.com/150" alt="user Profile" class="w-full h-full object-cover rounded-full">
-            </a>
-          </div>
+          <span class="">Machine Yard | User</span>
         </h1>
         <p class="text-xl text-custom-dark/70 max-w-2xl mx-auto">
           Discover, Book, and Manage Machines with Ease
@@ -601,7 +596,7 @@ async function fetchBookings() {
       setTimeout(typeWriter, 500); // 1-second pause before restart
     }
   }
-
+  
   // Run the effect when the page loads
   window.onload = typeWriter;
     </script>
