--- a/public/user-booking.html
+++ b/public/user-booking.html
@@ -19,6 +19,7 @@
   <script src="/js/utils.js"></script>
   <script>
     injectNavbar();
+    setProfilePic();
     const token = localStorage.getItem("token");
     if (!token) {
       utils.showToast("Please log in to book a machine", "error");
