--- a/public/user-profile.html
+++ b/public/user-profile.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Machine Owner Profile</title>
+  <link rel="stylesheet" href="css/styles.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <style>
@@ -187,6 +188,7 @@
 
     if (token) {
       fetchProfile();
+      setProfilePic();
     }
   </script>
 </body>
