--- a/public/owner-dashboard.html
+++ b/public/owner-dashboard.html
@@ -215,7 +215,7 @@ async function fetchBookings() {
 // Function to fetch customer details based on user ID
 // async function getCustomerDetails(userId) {
 //     try {
-//         const response = await fetch(`http://localhost:5001/api/owners1/${userId}`, {
+//         const response = await fetch(`https://machine-yard.vercel.app/api/owners1/${userId}`, {
 //             headers: { Authorization: `Bearer ${token}` },
 //         });
 
