--- a/public/user-dashboard.html
+++ b/public/user-dashboard.html
@@ -313,7 +313,7 @@ ${"☆".repeat(5 - Math.round(machine.rating ))}
       // Updated rateMachine function to handle star rating
       function rateMachine(machineId, rating) {
         fetch(
-          `http://localhost:5001/api/machines/${machineId}/rate`,
+          `https://machine-yard.vercel.app/api/machines/${machineId}/rate`,
           {
             method: "POST",
             headers: {
@@ -343,7 +343,7 @@ ${"☆".repeat(5 - Math.round(machine.rating ))}
         const location = document.getElementById("location").value;
         const type = document.getElementById("type").value;
         fetch(
-          `http://localhost:5001/api/machines?location=${location}&type=${type}`,
+          `https://machine-yard.vercel.app/api/machines?location=${location}&type=${type}`,
           {
             headers: token ? { Authorization: `Bearer ${token}` } : {},
           }
@@ -370,7 +370,7 @@ ${"☆".repeat(5 - Math.round(machine.rating ))}
       async function getOwnerName(ownerId) {
         try {
           const response = await fetch(
-            `http://localhost:5001/api/owners1/${ownerId}`,
+            `https://machine-yard.vercel.app/api/owners1/${ownerId}`,
             {
               headers: { Authorization: `Bearer ${token}` },
             }
@@ -393,7 +393,7 @@ ${"☆".repeat(5 - Math.round(machine.rating ))}
       async function fetchBookings() {
         try {
           const response = await fetch(
-            "http://localhost:5001/api/bookings/user",
+            "https://machine-yard.vercel.app/api/bookings/user",
             {
               headers: { Authorization: `Bearer ${token}` },
             }
@@ -534,7 +534,7 @@ ${"☆".repeat(5 - Math.round(machine.rating ))}
       }
 
       function cancelBooking(id) {
-        fetch(`http://localhost:5001/api/bookings/cancel/${id}`, {
+        fetch(`https://machine-yard.vercel.app/api/bookings/cancel/${id}`, {
           method: "PUT",
           headers: {
             "Content-Type": "application/json",
@@ -562,7 +562,7 @@ ${"☆".repeat(5 - Math.round(machine.rating ))}
 
       function rateMachine(machineId, rating) {
         fetch(
-          `http://localhost:5001/api/machines/${machineId}/rate`,
+          `https://machine-yard.vercel.app/api/machines/${machineId}/rate`,
           {
             method: "POST",
             headers: {
@@ -590,7 +590,7 @@ ${"☆".repeat(5 - Math.round(machine.rating ))}
       async function setProfilePic() {
         try {
           const response = await fetch(
-            "http://localhost:5001/api/auth/profile",
+            "https://machine-yard.vercel.app/api/auth/profile",
             {
               headers: { Authorization: `Bearer ${token}` },
             }
@@ -666,10 +666,10 @@ ${"☆".repeat(5 - Math.round(machine.rating ))}
           star.classList.toggle("text-gray-400", index >= currentRating);
         });
       }
-      // http://localhost:5001
+      // https://machine-yard.vercel.app
       async function submitRating(value, machineId, starEl) {
   try {
-    const response = await fetch(`http://localhost:5001/api/machines/${machineId}/rate`, {
+    const response = await fetch(`https://machine-yard.vercel.app/api/machines/${machineId}/rate`, {
       method: "POST",
       headers: {
         "Content-Type": "application/json",
